backend_main_django/django-app.yml
apiVersion : apps/v1
kind: Pod
metadata:
  name: django-kub
spec:
  containers:
    - name: k8s-test--django
      image: django_app:ver2
      imagePullPolicy: Never
