backend_main_django/ingress-django.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-service
            port:
              number: 80
